update manage, program screen

--- a/GymCareForTrainer/GymCareForTrainer/Screen/MessageAndInfo/ChatRoom/ChatRoomVC.xib
+++ b/GymCareForTrainer/GymCareForTrainer/Screen/MessageAndInfo/ChatRoom/ChatRoomVC.xib
@@ -99,7 +99,7 @@
                                                         <action selector="onClickSendMessage:" destination="-1" eventType="touchUpInside" id="iOh-eI-hmt"/>
                                                     </connections>
                                                 </button>
-                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4h2-Y6-3Mj">
+                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Viết tin nhắn..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4h2-Y6-3Mj">
                                                     <rect key="frame" x="15" y="0.0" width="233" height="40"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no"/>
