--- a/GymCareForTrainer/GymCareForTrainer/Screen/Schedule/Program/Cell/ProgramViewCell.xib
+++ b/GymCareForTrainer/GymCareForTrainer/Screen/Schedule/Program/Cell/ProgramViewCell.xib
@@ -5,9 +5,13 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="SFProDisplay-Light.ttf">
+            <string>SFProDisplay-Light</string>
+        </array>
         <array key="SFProDisplay-Regular.ttf">
             <string>SFProDisplay-Regular</string>
         </array>
@@ -18,21 +22,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="94" id="KGk-i7-Jjw" customClass="ProgramViewCell" customModule="GymCareForTrainer" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="312" height="94"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="79" id="KGk-i7-Jjw" customClass="ProgramViewCell" customModule="GymCareForTrainer" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="312" height="79"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="312" height="94"/>
+                <rect key="frame" x="0.0" y="0.0" width="312" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Yoga Yoga Yoga Yoga Yoga Yoga Yoga Yoga Yoga Yoga Yoga Yoga " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rF-KY-WHt">
-                        <rect key="frame" x="60" y="26.666666666666668" width="157" height="40.666666666666657"/>
+                        <rect key="frame" x="60" y="17.333333333333332" width="157" height="40.666666666666671"/>
                         <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="17"/>
                         <color key="textColor" name="color_3E4041"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Efr-az-Qm0">
-                        <rect key="frame" x="20" y="32" width="30" height="30"/>
+                        <rect key="frame" x="20" y="24.666666666666671" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="9sf-0A-gJQ"/>
                             <constraint firstAttribute="width" constant="30" id="f04-rR-0KN"/>
@@ -50,14 +54,14 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_next" translatesAutoresizingMaskIntoConstraints="NO" id="LFs-ZP-WoE">
-                        <rect key="frame" x="282" y="39" width="10" height="16"/>
+                        <rect key="frame" x="282" y="31.666666666666671" width="10" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="AGG-hd-wju"/>
                             <constraint firstAttribute="width" constant="10" id="W7W-bw-bmj"/>
                         </constraints>
                     </imageView>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a5S-nI-hRM">
-                        <rect key="frame" x="222" y="34" width="70" height="26.333333333333329"/>
+                        <rect key="frame" x="222" y="26.333333333333336" width="70" height="26.333333333333336"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đã huỷ" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9u5-hJ-Qur">
                                 <rect key="frame" x="10" y="5.0000000000000009" width="50" height="14.333333333333336"/>
@@ -81,16 +85,25 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Còn 10 suất" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tPI-QG-wPU">
+                        <rect key="frame" x="60" y="58" width="49" height="12"/>
+                        <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="10"/>
+                        <color key="textColor" systemColor="systemPinkColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="2rF-KY-WHt" firstAttribute="leading" secondItem="Efr-az-Qm0" secondAttribute="trailing" constant="10" id="CDl-mE-KVK"/>
                     <constraint firstAttribute="trailing" secondItem="LFs-ZP-WoE" secondAttribute="trailing" constant="20" id="D2n-oK-FXd"/>
                     <constraint firstItem="a5S-nI-hRM" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="FWi-uV-wDC"/>
+                    <constraint firstItem="tPI-QG-wPU" firstAttribute="top" secondItem="2rF-KY-WHt" secondAttribute="bottom" id="JpP-g8-RFx"/>
                     <constraint firstItem="a5S-nI-hRM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2rF-KY-WHt" secondAttribute="trailing" constant="5" id="PBq-l0-91k"/>
                     <constraint firstItem="LFs-ZP-WoE" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Thu-AL-DTG"/>
                     <constraint firstItem="Efr-az-Qm0" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="UWK-cA-6JF"/>
+                    <constraint firstItem="tPI-QG-wPU" firstAttribute="leading" secondItem="2rF-KY-WHt" secondAttribute="leading" id="Zco-xs-JAH"/>
                     <constraint firstItem="Efr-az-Qm0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="iTB-5w-b0j"/>
-                    <constraint firstItem="2rF-KY-WHt" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="xgG-Q9-ALa"/>
+                    <constraint firstItem="2rF-KY-WHt" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="wqd-ny-hLk"/>
+                    <constraint firstItem="2rF-KY-WHt" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-2" id="xgG-Q9-ALa"/>
                     <constraint firstAttribute="trailing" secondItem="a5S-nI-hRM" secondAttribute="trailing" constant="20" id="yDR-56-QOE"/>
                 </constraints>
             </tableViewCellContentView>
@@ -99,10 +112,11 @@
                 <outlet property="cancelLabel" destination="9u5-hJ-Qur" id="kHI-gE-Tw9"/>
                 <outlet property="cancelView" destination="a5S-nI-hRM" id="Rq3-go-k9V"/>
                 <outlet property="iconImageView" destination="Efr-az-Qm0" id="KW8-7W-xhK"/>
+                <outlet property="numberLabel" destination="tPI-QG-wPU" id="31T-ob-PMy"/>
                 <outlet property="titleLabel" destination="2rF-KY-WHt" id="0Uj-Zr-tuk"/>
                 <outlet property="widthConstrant" destination="f04-rR-0KN" id="mXn-M2-Dj4"/>
             </connections>
-            <point key="canvasLocation" x="16.793893129770993" y="11.971830985915494"/>
+            <point key="canvasLocation" x="16.793893129770993" y="6.6901408450704229"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -110,5 +124,8 @@
         <namedColor name="color_3E4041">
             <color red="0.24300000071525574" green="0.25099998712539673" blue="0.25499999523162842" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
