--- a/GymCareForTrainer/GymCareForTrainer/Screen/Other/Setting/SettingVC.xib
+++ b/GymCareForTrainer/GymCareForTrainer/Screen/Other/Setting/SettingVC.xib
@@ -17,7 +17,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingVC" customModule="GymCare" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingVC" customModule="GymCareForTrainer" customModuleProvider="target">
             <connections>
                 <outlet property="languageLabel" destination="eqv-kC-DTb" id="oBo-jK-VZM"/>
                 <outlet property="notiLabel" destination="NpR-H1-kRM" id="SAq-T1-50M"/>
@@ -46,8 +46,8 @@
                                 <action selector="onClickBack:" destination="-1" eventType="touchUpInside" id="K9L-xZ-V4R"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZ0-2f-eyh">
-                            <rect key="frame" x="171.66666666666666" y="62" width="50" height="24"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cài đặt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZ0-2f-eyh">
+                            <rect key="frame" x="164.33333333333334" y="62" width="64.333333333333343" height="24"/>
                             <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="20"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -66,10 +66,10 @@
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="wgM-da-bvb">
-                    <rect key="frame" x="0.0" y="100" width="393" height="204"/>
+                    <rect key="frame" x="0.0" y="100" width="393" height="136"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ziH-Gz-Yia">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="68"/>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ziH-Gz-Yia">
+                            <rect key="frame" x="0.0" y="-68" width="393" height="68"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YjF-gn-cMv">
                                     <rect key="frame" x="0.0" y="66" width="393" height="2"/>
@@ -79,7 +79,7 @@
                                     </constraints>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NpR-H1-kRM">
-                                    <rect key="frame" x="20" y="25.666666666666671" width="294" height="17"/>
+                                    <rect key="frame" x="20" y="25.666666666666664" width="294" height="17"/>
                                     <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="14"/>
                                     <color key="textColor" name="color_3E4041"/>
                                     <nil key="highlightedColor"/>
@@ -88,11 +88,8 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="8ki-am-OV5">
-                                    <rect key="frame" x="324" y="18.666666666666671" width="51" height="31"/>
+                                    <rect key="frame" x="324" y="18.666666666666664" width="51" height="31"/>
                                     <color key="onTintColor" name="color_00BAFF"/>
-                                    <connections>
-                                        <action selector="getNotiFromTeacher:" destination="-1" eventType="valueChanged" id="KKQ-9m-2by"/>
-                                    </connections>
                                 </switch>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -109,7 +106,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tga-zA-vVb">
-                            <rect key="frame" x="0.0" y="68" width="393" height="68"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="68"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hNS-sQ-5Xo">
                                     <rect key="frame" x="0.0" y="66" width="393" height="2"/>
@@ -134,7 +131,7 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ngôn ngữ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eqv-kC-DTb">
-                                    <rect key="frame" x="54" y="24.333333333333343" width="299" height="19.333333333333329"/>
+                                    <rect key="frame" x="54" y="24.333333333333329" width="299" height="19.333333333333329"/>
                                     <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
                                     <color key="textColor" name="color_3E4041"/>
                                     <nil key="highlightedColor"/>
@@ -145,9 +142,6 @@
                                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Pa-QO-87y">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="66"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                    <connections>
-                                        <action selector="onClickButton:" destination="-1" eventType="touchUpInside" id="6hC-vh-9e8"/>
-                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -170,7 +164,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LI4-O7-RHM">
-                            <rect key="frame" x="0.0" y="136" width="393" height="68"/>
+                            <rect key="frame" x="0.0" y="68" width="393" height="68"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8c-eI-1qC">
                                     <rect key="frame" x="0.0" y="66" width="393" height="2"/>
@@ -195,7 +189,7 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chính sách và điều khoản" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qls-v5-L4X">
-                                    <rect key="frame" x="54" y="24.333333333333314" width="299" height="19.333333333333329"/>
+                                    <rect key="frame" x="54" y="24.333333333333343" width="299" height="19.333333333333329"/>
                                     <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
                                     <color key="textColor" name="color_3E4041"/>
                                     <nil key="highlightedColor"/>
@@ -206,9 +200,6 @@
                                 <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJ4-nI-ySC">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="66"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                    <connections>
-                                        <action selector="onClickButton:" destination="-1" eventType="touchUpInside" id="yii-Qe-bov"/>
-                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
